--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.10.0"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.4"
   }
